<?xml version="1.0"?>
<package>
  <name>voxblox_planner</name>
  <version>0.0.0</version>
  <description>The voxblox_planner package</description>

  <maintainer email="mariana@todo.todo">mariana</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>voxblox_ros</build_depend>
  <build_depend>voxblox_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mav_path_smoothing</build_depend>
  <build_depend>mav_planning_common</build_depend>
  
  <run_depend>voxblox_ros</run_depend>
  <run_depend>voxblox_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mav_path_smoothing</run_depend>
  <run_depend>mav_planning_common</run_depend>

</package>
